# scripts

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  LICENSE  README.md  bash_util.sh  dfn.py  dprint.json  fzf_go_to_path.sh  fzf_util.py  git_util.py  linux_scripts.sh  linux_util.py  my_logout.sh  pyproject.toml  python_execute_script.py  python_init_code.py  python_pip_update.py  python_sops.py  python_template.py  secrets.enc.yaml  take_screenshot.sh  typos.toml  update_wall.sh
apps/: calculator.py
archived_scripts/: brave_bookmarks.sh  calculator.py  clip_hist.sh  define_word.sh  firefox_bookmarks.sh  fzf_go_to_path.sh  fzf_scripts.sh  git_commit_with_gemini.sh  git_scripts.sh  launch.sh  linux_scripts.sh  my_logout.sh  stopwatch.py  update_wall.sh  weather.sh
nix_flake_health/: apps.toml  main.py
