[project]
name = "scripts"
version = "0.5.0"
description = "my personal scripts for jokyv"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "John Kyvetos", email = "johnkyvetos@gmail.com" }]
# add dependencies for this project
dependencies = ["rich^13.0.0", "requests^2.25.0", "pyyaml^6.0.0"]

[tool.uv]
# True for libraries/packaged apps
# False for virtual projects (scripts only).
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# Run 'uv sync --all-groups' for all groups
# Run 'uv sync --group dev' for only dev
dev = ["pytest", "pytest-cov"]
# Run 'uv sync --group dev --group lint' for only lint
lint = ["bandit", "deptry", "pre-commit", "ruff", "ty"]
# Run 'uv sync --group dev --group security' for only security
security = ["detect-secrets", "trufflehog"]

# add deptry with `uv add --dev deptry`
# run deptry with `uv run deptry .`
[tool.deptry]
per_rule_ignores = { DEP002 = [
  "deptry",
  "ruff",
  "ty",
  "pytest",
], DEP001 = [
  "python_sops",
  "messaging",
], DEP003 = [
  "python_sops",
  "messaging",
] }
exclude = ["archived_scripts/**", ".venv/**"]
